# ChangeLog for app-misc/beanstalkd
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/beanstalkd/ChangeLog,v 1.35 2014/07/21 07:31:30 nimiux Exp $

  21 Jul 2014; Chema Alonso <nimiux@gentoo.org> beanstalkd-1.9-r1.ebuild:
  Stable for amd64 wrt bug #512332

*beanstalkd-1.9-r1 (21 Jul 2014)

  21 Jul 2014; Patrick Lauer <patrick@gentoo.org> +beanstalkd-1.9-r1.ebuild,
  -beanstalkd-1.9.ebuild:
  Fix cc invocation #517512

  04 Jun 2014; Patrick Lauer <patrick@gentoo.org> -beanstalkd-1.5.ebuild,
  -beanstalkd-1.6.ebuild, -beanstalkd-1.7.ebuild, -beanstalkd-1.8.ebuild:
  Cleanup old

*beanstalkd-1.9 (31 Mar 2014)

  31 Mar 2014; Patrick Lauer <patrick@gentoo.org> +beanstalkd-1.9.ebuild,
  +files/conf-1.9, +files/init-1.9:
  Bump for #505828

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

*beanstalkd-1.8 (05 Nov 2012)

  05 Nov 2012; Patrick Lauer <patrick@gentoo.org> +beanstalkd-1.8.ebuild,
  +files/init-1.8, beanstalkd-1.7.ebuild:
  Bump

*beanstalkd-1.7 (01 Oct 2012)

  01 Oct 2012; Patrick Lauer <patrick@gentoo.org> +beanstalkd-1.7.ebuild,
  +files/init-1.7, -beanstalkd-1.3.ebuild, -beanstalkd-1.4.6.ebuild:
  Bump for #436250

  01 Jun 2012; Zac Medico <zmedico@gentoo.org> beanstalkd-1.3.ebuild,
  beanstalkd-1.4.6-r1.ebuild, beanstalkd-1.4.6.ebuild, beanstalkd-1.5.ebuild,
  beanstalkd-1.6.ebuild:
  inherit user for enewuser

*beanstalkd-1.6 (18 May 2012)

  18 May 2012; Patrick Lauer <patrick@gentoo.org> +beanstalkd-1.6.ebuild:
  Bump for #416329

  14 Feb 2012; Ulrich Müller <ulm@gentoo.org> beanstalkd-1.5.ebuild:
  QA: Fix ebuild header, bug 398773.

*beanstalkd-1.5 (30 Jan 2012)

  30 Jan 2012; Patrick Lauer <patrick@gentoo.org> +beanstalkd-1.5.ebuild:
  Bump for #401243

  26 Apr 2011; Thomas Kahle <tomka@gentoo.org> beanstalkd-1.4.6-r1.ebuild:
  x86 stable per bug 361157
