@@ -11,20 +11,18 @@ AUX init-1.4.6 637 SHA256 f98e55b8d96e02223849a36bdc927ad9843ae73a6c3a8b09d1f9b9
 AUX init-1.7 604 SHA256 f84fd5b9f95202bc970bf44f0832afc52f7b7657526a4a01297c8ed4ca835b71 SHA512 8a31e8afb6114c79489d94208bb371a928179790e331edde364f3e9275c8e0c86f05c0bc9cb314ce8699814ebfe1d6b8b2fb64cbda90711ccbf36e3ec326af71 WHIRLPOOL 89ad6edbfa28c6dafcc7f7ea520326587092982589006ae366a9f2cc4ccaa1dcf8a8fc5147d03e515d51065654836f48425b940502735571a16d4fd73f21519c
 AUX init-1.8 604 SHA256 67580c29536fe3bb973a2335b4d931f45d22cb0e6d3ee08347568dfc2eb803c1 SHA512 49ca8ccaa6e35caa94f862244a46cf4f9ce7bd4487fbd0ac5e570ff39dba6f934ed568fef4ce74a8a499b003ee44cdf4bdb78925313b77013236278b12a2fd0f WHIRLPOOL 65919393ad60a434e2f1bb9f1f87d00111c027e13d45d6b0e579f70245a5a093696e115cef057ef68075d0226f18cf6ba1f1811aa445a2718656923d7d5e9a13
 AUX init-1.9 620 SHA256 be0268a73800ff0132fbcaa43188fab49fc3c6f50b26e238c509641c0851f53b SHA512 5dce94d994a5cbde58007454aeadd9a1a186b540019f85f52f006d9485b8abcba36bba5440cf407e9bb43672b14d5c2ca206a3db25715aa8b2bffea04fb4e8e4 WHIRLPOOL 3e13b95957c17a59ef8bccc93f7740519d35e3a22251e22bfb6580298a43d8289de4d02e6072e6af06d6a9d02a5e76834be5d59aac7cb1b50d9675c7c543f0f0
+DIST beanstalkd-1.10.tar.gz 66243 SHA256 923b1e195e168c2a91adcc75371231c26dcf23868ed3e0403cd4b1d662a52d59 SHA512 db85e4a32c686330e50d64d497a39bb9806de42a2c2d2c84eb260ae8cfad91b4c99eef6a8f0ab3e62d0ca71a31837778ec68a4299899ac5a9d94a5a4403d673b WHIRLPOOL 3074fb2df0aa835d46d95a90a573bfe2afd1d316da6c9739d37d1eafb85b987ef12c3113f2bc51afed014e151e5eb064922b46c16a92e3113480b1c5ec8dc50c
 DIST beanstalkd-1.4.6.tar.gz 140858 SHA256 a03aca5ccd87c2a1bb6cdaf38d3463c9f987090f4eb6cd9c7f6e03d3d54d3ac9 SHA512 07cd77540367c25cdd16bea6f46a5e43162a13d59e96a6821465bfc950e6fbac2e28e0e1cb0f5b6d1483b493b59daad68c0d99672edeeb4f709d6b835d76eb64 WHIRLPOOL cd7f35ad0432000894a186803b01dbf963146fcb5473fc185dd918987a3235df98fbc743d6bcf80b7d364532b772fbde723e13c649d15fa40870c256e6ea542a
 DIST beanstalkd-1.9.tar.gz 63794 SHA256 158e6d6090c0afac7ee17b9f22713506b3e870dc04a738517282e2e262afb9eb SHA512 0b8ba803b511bc4a3275d23f2076d8129107df3756d0c991460693a6999a895da4fe84c7931afe153ea17245d7c280f92df977cc35e715d7997e54a861b547f4 WHIRLPOOL 13517e18b2b1b4517eda6f57645c3d078f20c73d450f96803939b5dc43433364a5214a3a6b39568a0bb82a53fc92195cd28ecf1699e963b8579b121c94b7d667
+EBUILD beanstalkd-1.10.ebuild 1195 SHA256 9c60dfd32a8f268294392b0dbb9add0e69c3c0baab7613f383d938772f2de128 SHA512 4d1e7f73a69a4d57032f7bd4528a8ce75d17e8993ae213421b13fb9c26cf593eb4f66878d0845e5793842ee6ed25d69dca5e16f1b22942454baf420c83db1166 WHIRLPOOL 4683f6836fccab039249006c79f8e4f78547b7dee04968707b6d879d38d85e12a73422c0f0bdf4ae8c65169ad0015ebb4023ffdcf445e71b03f16040b3b71dd5
 EBUILD beanstalkd-1.4.6-r1.ebuild 1245 SHA256 221287c57824a1930415cab4af943cfddd6ca3e8e86925afb93712f0ee1613f8 SHA512 8fa909f90769712332ce73c06bd255bcb9c8c5cadd1afceed76b42cb355bfb1268b8ab7fd7e990317d3be5e6fdffeb0ad343aebc75c31225b2d0ffc46219b864 WHIRLPOOL bec3371ac447a2986768ba566a23ab0dd5cc059e3f3b4b78abfb61cbcf10b2c2ceac26b9a65e69c83228d880deecbd7f205abba3f2bd2700ad0bb23c298fd763
 EBUILD beanstalkd-1.9-r1.ebuild 1198 SHA256 ef8f3a3c8c349597c50fbb1ba9b339482e2830b29ceb8b67db3355a51d75c075 SHA512 a4a0af4194ce4fc5fd31c4290b815e42aba0925f7e258919884cb2239eacee74c50c6be18e4f732cec49fa904075ebce0e748c2433aaa1072b4cb5dd6bac78ce WHIRLPOOL 43c6648a233c1d173a0f1d63aca379ebfff326c6f4ab88052b879c58dd40cbf7f284396fe734e5c83eedbc67f150684a09202e77fb658537fc9b5c097263fcee
-MISC ChangeLog 5311 SHA256 607487431a16e71341941faa9d2c0b6c8aa0652a0dcee022ac3bd84a1abdedfb SHA512 a56194f09084d2096059f12e23c341f56ae0630f4c73fd93c4c21089a0b3cb23e6ad475af2b97a99d940e1e969b9fa12f921e591dbe9faadf767bf7f7f96dedd WHIRLPOOL 96cae14c9c072ad062f9cceea6845a563223644a6acfccc552e5194bf216a3e65c20a78ad5d0fbd9195ea3ae40ae47c0c2e90cd4b6ca9f24b4e4e7c10a99a941
+MISC ChangeLog 5432 SHA256 312a35737397d34d128fa60168f4b362650650439af9eda75e10c5c76ab05a0a SHA512 3716c6e33db8a417431022146009d35c900738d34b2ff3471facb93f2bc56ef45e1540187d4c8b41e0cbfb0a38c2677602bbe9966cf92343d2e817cfec1c7c7f WHIRLPOOL e18a36c445efff099ad3d2edf9d835e2477eeb297dafe47496d644360eb1eddd08e34616a277b168e8e61e03cd371b1e8716d41242f09ea4d2a0c41ba1c6362d
 MISC metadata.xml 426 SHA256 7267c3d49c099295ca8f5025f38c0eee1eab7c0227bdfb5391161bd4caa424ee SHA512 2a0ffebbf3ed10760b101b9fd8e886460ec5b5eb0a81a9b6c3f03ba73b82ff278816652fbf77294b297048a2fd22cd93faea7e784c8c776be222ef5bae89f814 WHIRLPOOL fbd5d3bd0665b21d51dddd443c7e6e16bd197a647dc241f2b3dd799ef335e9ae1feeecab06eccb526de02101f76060e07acd83c8593e2e307afcfeb93c172315
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTzMIYAAoJEA2sAkrWKOU2ILIH/0UAp/vT+76cYxv6tfIgXPxe
-/T42o6SaIFAtU0iINP2P//tWzIQgsbpPpLvihEUX8P9gqo2Nf1G6jNugoLY1BXqB
-Qxt8IyY7GhTCM6VvZYIG4QCfki6l4K6zCJBAV+y7W5C8y/ry17W+fOZRRE+abSmW
-bE5DwWZG8D73Sau40v7vyJP1yJyn1raqolD43fDTP2s8ZaPexA7XjhC0vLnb94vP
-ENWazNnMMaexACEtjPjgMUDNxaPDZOF2V216kQuhBVkZ70PDsJuA/mAsXWkOXFM1
-bXbuNCMMBhMt+XNX6iMsotlup5ARrB0VYbIeoRmJQNbOOk+BXr6GKg3EgsnRRac=
-=Zplm
+iF4EAREIAAYFAlPofAQACgkQKiQSS7ZY+hMeeQEAkXKA21Gt7F9RqC/26KUGHeJ0
+u81WCN1CUhHXhLwDv3wBAMdcV972EWbNN2hPdS/aeL+/rY1xS6hWquRKelRRFajl
+=7QUW
 -----END PGP SIGNATURE-----
