@@ -1,0 +1,11 @@
+DEFINED_PHASES=compile install prepare setup
+DEPEND=virtual/pkgconfig
+DESCRIPTION=A simple, fast work queue
+EAPI=5
+HOMEPAGE=http://kr.github.io/beanstalkd/
+KEYWORDS=~amd64 ~mips ~x86 ~sparc-fbsd ~x86-fbsd ~amd64-linux ~x64-macos ~x86-macos
+LICENSE=MIT
+SLOT=0
+SRC_URI=https://github.com/kr/beanstalkd/archive/v1.10.tar.gz -> beanstalkd-1.10.tar.gz
+_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=739a9bb50923db5dc31ccc0083f1726d
