@@ -9,4 +9,4 @@ RDEPEND=!sys-fs/aufs2 !<sys-fs/aufs3-3_p20130318
 SLOT=0
 SRC_URI=http://dev.gentoo.org/~jlec/distfiles/aufs-util-3.16_p20140811.tar.xz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	linux-info	2b8c53f6065bdee2d757472215a3088f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=8785a07ff1a9153cac4fd0e35ec40189
+_md5_=488d9df20677dd5c704d358ab3dfffde
