@@ -17,26 +17,26 @@ EBUILD aufs-util-3.15_p20140707.ebuild 989 SHA256 ba18c614ccf5822db753d565542e2e
 EBUILD aufs-util-3.15_p20140721.ebuild 1016 SHA256 ee2645cb47d4c01ccad08423ca70a1fb298d1b5afe0d1c42a4dbe2e9145fdf93 SHA512 9e3992ae10d2c7d57086d2b3ce613c51f0179e965e718c70f0fc67c54b4949388f06cc1764904ccebbfead854359664b15c0e3ebbb0dbb3c9a127b2a8f9cc14b WHIRLPOOL c74449be681d976568b00cd309e2a54b402f94571570fd71258a98bca57f8f180e3f848eac7a9a998878952514c75d132316eaf1c8ee3c5d163c6a7c6a5180af
 EBUILD aufs-util-3.15_p20140728.ebuild 1016 SHA256 4b3fdab2901f1a44e23f621993cad176979b06e3b722bcac4caa0b4b0325829d SHA512 65172397e6051caacb96fa5e5e715dd01d8e1e8786ee34ad3f0dfd3e24f941e7e96c1c607a63b138aede061ba038f675c8f05e25bf67cc89be795dc5a08583e2 WHIRLPOOL c7352bb802f9f75655d110d2c926dab41a48755054941cf270e769f9a2c7ed98f0496d3f08f967fb176731b7e927cf942c62a4ff5e282c9cebf6336c683ed1da
 EBUILD aufs-util-3.15_p20140804.ebuild 1016 SHA256 0b372745f850aed03f46d57bda09c6a64d863897e23f8655ae72e909c4df4574 SHA512 7d9df5f3b9615b37e77243dab18a2ac7c22e41b64d62f4b9845b9f325c261cb364fdd8aaa7e967d2831bc4e0bedbf4134bc66a6ddd7de41dc9c483b020699186 WHIRLPOOL 72843b62356ab451842b2c8eeb49f28876a3bf92a900e72f73de1f6a846bf9cca72fe10b6d156b0b31b1b08fae0dcf5e01e060f5c732eef795316e25300d8edb
-EBUILD aufs-util-3.16_p20140811.ebuild 1078 SHA256 df46b462f9e7bfad3fdd71a196a807c29be6a35eb62ef953a7e5106dda6911ef SHA512 97d6de59dc483aae813fda74c813974943799317de2c1c4941ce157e066ce27588fb9a25d3d6ec1d511eba95de559203565e9c956554379fb3309de3a32eef1d WHIRLPOOL 8c4a0cfb2bd57b7500e011b6d65c906184733591a66ddceda1dd9832214de0f1dd21e131485b36d03d9da1f5c11d2a8feb29ca0005306f6d1dcf8836fd4fb49a
+EBUILD aufs-util-3.16_p20140811.ebuild 1134 SHA256 e25812b779a4811332126081b01d083ecf1179a56ef6eaec993b4f6c2714e278 SHA512 64416660dc8eb629e34a9ef1086315c261b474e673f95bee8711013571c2981fabefc741ebc1f324d0449607d4e7ca0627bd6d769e4859381283ebedbf5919ce WHIRLPOOL 1508bbee4448b6be236fbc740c3a16898bb8b9e31158bce7181cca5d7adf52d780d326f7b67b33420b30be2a6d660d523c535fb9ffd5efa08a394cbaa3b16ead
 EBUILD aufs-util-3.9_p20130915.ebuild 992 SHA256 3139de17cafdaad9d4011adf17498de17b96b39e6cde653d94a676070f8fd579 SHA512 0c7b54168396b504b81134e3580d9b1544dacef414da519eccc8ea57ac5bdd4645998a998b35d6d7631928f6738142fbca5e08cc2a81d8d5999113716185228c WHIRLPOOL b49e3d3d710e4c9f0c9b8173345c02dfcc6a895b038080f4e309c25cfe27953ba6710351428771014406a04a97e6b7ff50eece11acec078e230a93805c624fd3
-MISC ChangeLog 5678 SHA256 2e9a7c0f2b5f55b86f1c61edf469cb2b419993be59396f89b10275b92a548853 SHA512 2b2022a8a11e8ed23db20fe89eedea1154fb683ece6560bef005653ab5bdd94981178b0870c6ba134da46c031f13120217adc3e56a3633145d11c7fbb3101355 WHIRLPOOL 6fd68904296665137ceb08aa150f98e0db3204c78feeb8ee8c6f513bdf8bcc4843c76fa931cc153d0945123fc91e7c525d61e090ebc3924a7f558de5f9ca99a8
+MISC ChangeLog 5775 SHA256 f974aa7fb4463bdb86c5380c6e6de12e983e4f678836d76b72f040459562c263 SHA512 8d8656d6382939978368e68b333d0ba0e66d31eb4d85ff70ada6420bad8e0e424a9186a058d8dae1ff6bd6c5357b557ec740bad72fc58912e02cc0edfd533e04 WHIRLPOOL 5d60288bae431c669a23b90b683cd8ade685d2a299fa0f05e846de34e418f18551cddfb141adc9ed15142864010d76a90b75297eef6f4985963d5be31188a692
 MISC metadata.xml 205 SHA256 b4660d1f4b47c8c40fc6f986791c6da3f0d7513fe4489a0d2bbb83346dcb1f5b SHA512 0e0b6e89b125b4849b4164e7cabb5297ae930c4db499c6685c3852a60e209418c26eb33e452a0a78e800c960ac5032f97d436bc3b7266a0ac76092f6f2595d11 WHIRLPOOL dc3dc7c840a6640b42e3fc981c95d0a8e43d3b5834f447a09deebc1b35dbb26e48c3d85db73725c42d2036edd9f141fb02a3a9d61522861f4e97e3e974987473
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJT5+SIXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJT6HkoXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir9JIP/A/Du3vFf5/SoUMbaT7WcN+c
-DKSkug5loty0ktoFDnYyfKdGYEK7faTQwiIL3s4vOgv5FA7EurFrTqvDbfFDDOV0
-+Cv8MJI8W9xcnfA94mPcFfgaWZ4Fz9kfiPBjhuH2HJJ9uMhjTLss8ZiODr/5rOOu
-FCO9bnwPIoOnuc1d6FgSXc3lbvW7zPc289NMBzzsFIqU2aU42vHZZ5biRF3y1xmg
-sL2mHHsgVgySmpy2uB0+qTyuAeC7xNwgJrU09U3YZluHWXzrNSdPkOWetTVM+0Ld
-bAv/xY53aBjjX0NlJM6B2QUbAvP+Oo88rC/lvLtv6sikSILuWUhJtDJ7PkYab5YN
-dH1pY6bKJIjhTy4PAmIebCX6E3Rv3EpI2rwBJ0GKvfuUt6KUMfYd/7jnl8bnt2oT
-MOtJee8tYC1IGs/N7M1hULMNFGJJe23mqHDxWzmN7+cStUoWojlTSxuSvyHHH05J
-BForge0S2myS8/NkSeKgumzA2twndT9dYmsejavGEcmTjRzqNFdxLqJ+/rPk3ReN
-qPT/v3IFRCbbQhDm5lyoxxVms6xFxidfI+nD7o/EsdLliql82RvBIZ1R5OGd1LXr
-90cs2RiWky1pZ3kyPUq9sPIKgHi18KkuFTn8TIbw29va0BOr9la/HuXmqqbwilYm
-7jITC2yZwREECoAnJpht
-=YO2L
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FViruzAP/1kFM8DvNpEesV5KqC5rTG9T
+sTV/qxw0E/av3fGjIbE3h7Fd8vWJH0DzIR+IUs5BdL8AYxTxdnLFb6KrB+qD3PvU
+oBiIzOhXfbK9vdMTGPLAo2LHb3q8FlA2dZT5Jm8f4xfDeMCghcbYi4QKI5bBzDSm
+lf9YjCuhjeoko90Uhy/YGgNWkzUnYhS0Bwx8ok2MhMPjchEK3JZhje1IlTC5bNPk
+Qk36MArd8h4D/DLWu4/JjwLpJKSmvhT8LgMR62VXOdgQYF2VmvI9siTMK/0oEFlj
+lY4nwMr6lVXs8fcZnUgvwzSqVYRAWUU1/FbFkhEYlukGeSMu+QDZ5uMZEMrAXN3y
+gP2DIdU07o9tb+4PbBiw9GiTjcAm/zRvVIA9aglCRHnMmQizH42JAymbOxgsCNsI
+RFsTHPdezoDzZW4L/IDDxZ4XP8pJqk1XhAq9Dk9cDP7OHXAdWNSQyZ6XMCA2O5pp
+UJEl7vfPUaRRsPTe6aVgFgEcc0d+qTmfgMs7+yyc0eR1+hyZwkjPywGXa2gRAfp8
+uJfSbPCpqWpwCKX8y61rXHV7CPG/HXGAcVnMQv8gF7WeatRVnyJUinMmNWwhgNrD
+IkaeV8tXfltcGWCEBt5bH/xMdSXeV0o8D7nY6R8hzxOCmpshFxD9ltIVtk7zWZrB
+X7pnikXd0Ic31PfiVnX0
+=rWQb
 -----END PGP SIGNATURE-----
