@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/beanstalkd
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/beanstalkd/ChangeLog,v 1.35 2014/07/21 07:31:30 nimiux Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/beanstalkd/ChangeLog,v 1.36 2014/08/11 08:17:03 ultrabug Exp $
+
+*beanstalkd-1.10 (11 Aug 2014)
+
+  11 Aug 2014; Ultrabug <ultrabug@gentoo.org> +beanstalkd-1.10.ebuild:
+  version bump
 
   21 Jul 2014; Chema Alonso <nimiux@gentoo.org> beanstalkd-1.9-r1.ebuild:
   Stable for amd64 wrt bug #512332
